# rust-backend-foundry

./: .gitignore  Cargo.toml  README.md  RUST_MASTERCLASS.md  copy_script.sh  curriculum_summary.md  gemini.md  how_to_master_rust_with_this_repo.md  navigating_the_rust_masterclass.md  rust_domains_backend_vs_embedded.md  rust_foundations_reference.md  rust_init.sh  rust_mastery_phase_2.md  rust_nav.ps1  rust_nav.sh  setup_lesson_cargo.ps1
01-variables-mutability-types/: Cargo.toml  analysis.md
01-variables-mutability-types/src/: main.rs
02-ownership-secret-sauce/: Cargo.toml  analysis.md
02-ownership-secret-sauce/src/: main.rs
03-mutable-borrowing-references/: analysis.md
03-mutable-borrowing-references/src/: main.rs
04-structs-impl-blocks/: Cargo.toml  analysis.md
04-structs-impl-blocks/src/: main.rs
05-enums-pattern-matching/: Cargo.toml  analysis.md
05-enums-pattern-matching/src/: main.rs
06-traits-generics/: analysis.md
06-traits-generics/src/: main.rs
07-error-handling/: analysis.md
07-error-handling/src/: main.rs
08-custom-errors/: Cargo.toml  analysis.md
08-custom-errors/src/: main.rs
09-file-io-error-handling/: Cargo.toml  analysis.md
09-file-io-error-handling/src/: main.rs
10-async-concurrency/: Cargo.toml  analysis.md
10-async-concurrency/src/: main.rs
11-channels-messaging/: Cargo.toml  analysis.md
11-channels-messaging/src/: main.rs
12-modularizing-rust-projects/: .gitignore  Cargo.toml  analysis.md
12-modularizing-rust-projects/services/: payment.rs  upload.rs
12-modularizing-rust-projects/src/: main.rs
13-async-outbox-relay-simulation/: Cargo.toml  analysis.md
13-async-outbox-relay-simulation/src/: main.rs
14-async-outbox-relay-tokio-edition/: Cargo.toml  analysis.md
14-async-outbox-relay-tokio-edition/src/: main.rs
Module-01-Core-Foundations/Lesson-01-1-Variables-Mutability-Shadowing/: Cargo.toml  analysis.md
Module-01-Core-Foundations/Lesson-01-2-Primitive-Types-Type-Inference/: Cargo.toml  analysis.md
Module-01-Core-Foundations/Lesson-01-3-String-vs-str-vs-slices/: Cargo.toml  analysis.md  main.rs
Module-05-Error-Handling-Like-a-Pro/Lesson-05-3-ThisError-and-Anyhow-Crates/: Cargo.toml  analysis.md
Module-05-Error-Handling-Like-a-Pro/Lesson-05-3-ThisError-and-Anyhow-Crates/src/: main.rs
Module-07-Async-Rust-Concurrency/Lesson-07-4-Async-Error-Handling-and-Cancellation/: Cargo.toml  analysis.md
Module-07-Async-Rust-Concurrency/Lesson-07-4-Async-Error-Handling-and-Cancellation/src/: main.rs
Module-07-Async-Rust-Concurrency/Lesson-07-5-Real-Example-Async-Outbox-Relay/: Cargo.toml  analysis.md
Module-07-Async-Rust-Concurrency/Lesson-07-5-Real-Example-Async-Outbox-Relay/src/: main.rs
Module-08-Channels-Messaging-and-Synchronization/Lesson-08-3-Actor-Model-and-Message-Passing-Simulation/: Cargo.toml  analysis.md  main.rs
Module-09-Project-Modularization/Lesson-09-4-Real-world-Modular-Outbox-Bridge-Layout/: Cargo.toml  analysis.md  main.rs
Module-10-Advanced-Concurrency-Patterns/Lesson-10-3-Fan-Out-Pattern-using-Broadcast-Channels/: Cargo.toml  analysis.md  main.rs
Module-11-Async-Lifetimes-Borrowing-and-Interior-Mutability/Lesson-11-4-Practical-Async-Cache-or-Pool-with-Lifetimes/: Cargo.toml  analysis.md  main.rs
Module-12-FFI-Python-C-Go-WASM/Lesson-12-5-Deploying-to-Cloudflare-Workers/: Cargo.toml  analysis.md  main.rs
Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-6-GATs-Generic-Associated-Types-in-async-traits/: Cargo.toml  analysis.md  main.rs
Module-14-Real-World-Integration-Project/Lesson-14-2-Outbox-Store/: Cargo.toml  analysis.md  main.rs
Module-14-Real-World-Integration-Project/Lesson-14-3-Message-Relay/: Cargo.toml  analysis.md
Module-14-Real-World-Integration-Project/Lesson-14-3-Message-Relay/src/: main.rs
Module-14-Real-World-Integration-Project/Lesson-14-4-Retry-Logic-with-Exponential-Backoff/: Cargo.toml  analysis.md
Module-14-Real-World-Integration-Project/Lesson-14-4-Retry-Logic-with-Exponential-Backoff/src/: main.rs
Module-14-Real-World-Integration-Project/Lesson-14-5-Parallel-Processing-with-join-rayon/: Cargo.toml  analysis.md
Module-14-Real-World-Integration-Project/Lesson-14-5-Parallel-Processing-with-join-rayon/src/: main.rs
Module-14-Real-World-Integration-Project/Lesson-14-6-Graceful-Shutdown-Cleanup/: Cargo.toml  analysis.md  main.rs
Module-14-Real-World-Integration-Project/Lesson-14-7-Logging-Observability-with-tracing/: Cargo.toml  analysis.md
Module-14-Real-World-Integration-Project/Lesson-14-7-Logging-Observability-with-tracing/src/: main.rs
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-1-Async-Agents-with-Traits-Tasks/: Cargo.toml  analysis.md
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-1-Async-Agents-with-Traits-Tasks/src/: main.rs
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-2-Heartbeat-Health-Ping-Services/: Cargo.toml  analysis.md
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-2-Heartbeat-Health-Ping-Services/src/: main.rs
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-3-Self-recovering-Workers-Supervisor-Tree/: Cargo.toml  analysis.md
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-3-Self-recovering-Workers-Supervisor-Tree/src/: main.rs
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-4-Message-Flow-with-Trait-based-Agents/: Cargo.toml  analysis.md  main.rs
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-5-Embedding-AI-Inference-Pipelines/: Cargo.toml  analysis.md
Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-5-Embedding-AI-Inference-Pipelines/src/: main.rs
Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-2-Streaming-File-Processing-with-Async-Buffers/: Cargo.toml  analysis.md
Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-2-Streaming-File-Processing-with-Async-Buffers/src/: main.rs
Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-4-Integrating-Rust-into-Python-AI-Pipelines/: Cargo.toml  analysis.md  main.rs
(+182 files in other folders)
