 [workspace]
         members = [
    "Module-01-Core-Foundations/Lesson-01-1-Variables-Mutability-Shadowing", 
    "Module-01-Core-Foundations/Lesson-01-2-Primitive-Types-Type-Inference", 
    "Module-01-Core-Foundations/Lesson-01-3-String-vs-str-vs-slices", 
    "Module-01-Core-Foundations/Lesson-01-4-Control-Flow-Loops-and-Match-Statements", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-1-Ownership-Model", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-2-Move-Semantics-vs-Clone-vs-Copy", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-3-Borrowing-References", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-4-Mutable-vs-Immutable-References", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-5-Lifetimes-Explained-Visually", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-6-Function-Lifetimes", 
    "Module-02-Ownership-Borrowing-Lifetimes/Lesson-02-7-Structs-with-References-Lifetime-Parameters", 
    "Module-03-Structs-Enums-and-Pattern-Matching/Lesson-03-1-Structs-Tuples-and-impl-Blocks", 
    "Module-03-Structs-Enums-and-Pattern-Matching/Lesson-03-2-Associated-Functions-vs-Methods", 
    "Module-03-Structs-Enums-and-Pattern-Matching/Lesson-03-3-Enums-and-Pattern-Matching-Mastery", 
    "Module-03-Structs-Enums-and-Pattern-Matching/Lesson-03-4-Option-T-and-Result-T-E-patterns", 
    "Module-04-Traits-Generics-and-Abstraction/Lesson-04-1-Defining-Traits", 
    "Module-04-Traits-Generics-and-Abstraction/Lesson-04-2-Generics", 
    "Module-04-Traits-Generics-and-Abstraction/Lesson-04-3-Trait-Bounds-and-Where-Clauses", 
    "Module-04-Traits-Generics-and-Abstraction/Lesson-04-4-Blanket-Implementations-and-Default-Methods", 
    "Module-04-Traits-Generics-and-Abstraction/Lesson-04-5-Trait-Objects-vs-Static-Dispatch", 
    "Module-05-Error-Handling-Like-a-Pro/Lesson-05-1-Result-T-E-and-Operator", 
    "Module-05-Error-Handling-Like-a-Pro/Lesson-05-2-Custom-Error-Types", 
    "Module-05-Error-Handling-Like-a-Pro/Lesson-05-3-ThisError-and-Anyhow-Crates", 
    "Module-05-Error-Handling-Like-a-Pro/Lesson-05-4-Handling-Panics-and-Recoverability", 
    "Module-06-File-IO-System-Interaction/Lesson-06-1-Reading-and-Writing-Files", 
    "Module-06-File-IO-System-Interaction/Lesson-06-2-Buffered-IO-and-Error-Propagation", 
    "Module-06-File-IO-System-Interaction/Lesson-06-3-Practical-Example-File-based-Outbox-Simulation", 
    "Module-07-Async-Rust-Concurrency/Lesson-07-1-Intro-to-async-await", 
    "Module-07-Async-Rust-Concurrency/Lesson-07-2-Futures-and-Tasks-Explained", 
    "Module-07-Async-Rust-Concurrency/Lesson-07-3-Tokio-Fundamentals", 
    "Module-07-Async-Rust-Concurrency/Lesson-07-4-Async-Error-Handling-and-Cancellation", 
    "Module-07-Async-Rust-Concurrency/Lesson-07-5-Real-Example-Async-Outbox-Relay", 
    "Module-08-Channels-Messaging-and-Synchronization/Lesson-08-1-MPSC-and-Broadcast-Channels", 
    "Module-08-Channels-Messaging-and-Synchronization/Lesson-08-2-Select-and-Graceful-Shutdowns", 
    "Module-08-Channels-Messaging-and-Synchronization/Lesson-08-3-Actor-Model-and-Message-Passing-Simulation", 
    "Module-09-Project-Modularization/Lesson-09-1-Mod-Pub-and-use", 
    "Module-09-Project-Modularization/Lesson-09-2-Creating-Library-Crates", 
    "Module-09-Project-Modularization/Lesson-09-3-Multi-crate-Workspaces", 
    "Module-09-Project-Modularization/Lesson-09-4-Real-world-Modular-Outbox-Bridge-Layout", 
    "Module-10-Advanced-Concurrency-Patterns/Lesson-10-1-Tokio-vs-Async-Std-vs-Smol", 
    "Module-10-Advanced-Concurrency-Patterns/Lesson-10-2-Background-Worker-Pool", 
    "Module-10-Advanced-Concurrency-Patterns/Lesson-10-3-Fan-Out-Pattern-using-Broadcast-Channels", 
    "Module-10-Advanced-Concurrency-Patterns/Lesson-10-4-CPU-bound-work-with-spawn_blocking", 
    "Module-10-Advanced-Concurrency-Patterns/Lesson-10-5-Graceful-Shutdowns-with-select", 
    "Module-11-Async-Lifetimes-Borrowing-and-Interior-Mutability/Lesson-11-1-Rc-Arc-and-Reference-Counting", 
    "Module-11-Async-Lifetimes-Borrowing-and-Interior-Mutability/Lesson-11-2-RefCell-Interior-Mutability", 
    "Module-11-Async-Lifetimes-Borrowing-and-Interior-Mutability/Lesson-11-3-Mutex-and-RwLock", 
    "Module-11-Async-Lifetimes-Borrowing-and-Interior-Mutability/Lesson-11-4-Practical-Async-Cache-or-Pool-with-Lifetimes", 
    "Module-12-FFI-Python-C-Go-WASM/Lesson-12-1-PyO3-and-Maturin-Basics", 
    "Module-12-FFI-Python-C-Go-WASM/Lesson-12-2-Safe-FFI-and-no_mangle-extern-C", 
    "Module-12-FFI-Python-C-Go-WASM/Lesson-12-3-Rust-Shared-Libraries-in-Go-via-cgo", 
    "Module-12-FFI-Python-C-Go-WASM/Lesson-12-4-WASM-wasm-bindgen", 
    "Module-12-FFI-Python-C-Go-WASM/Lesson-12-5-Deploying-to-Cloudflare-Workers", 
    "Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-1-Trait-Objects-and-dyn-Trait", 
    "Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-2-PhantomData-and-Zero-Cost-Abstractions", 
    "Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-3-Lifetime-Generics-Traits", 
    "Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-4-Higher-Rank-Trait-Bounds-HRTBs", 
    "Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-5-Associated-Types-vs-Generics", 
    "Module-13-Advanced-Types-Generics-and-Lifetimes/Lesson-13-6-GATs-Generic-Associated-Types-in-async-traits", 
    "Module-14-Real-World-Integration-Project/Lesson-14-1-Designing-the-Architecture", 
    "Module-14-Real-World-Integration-Project/Lesson-14-2-Outbox-Store", 
    "Module-14-Real-World-Integration-Project/Lesson-14-3-Message-Relay", 
    "Module-14-Real-World-Integration-Project/Lesson-14-4-Retry-Logic-with-Exponential-Backoff", 
    "Module-14-Real-World-Integration-Project/Lesson-14-5-Parallel-Processing-with-join-rayon", 
    "Module-14-Real-World-Integration-Project/Lesson-14-6-Graceful-Shutdown-Cleanup", 
    "Module-14-Real-World-Integration-Project/Lesson-14-7-Logging-Observability-with-tracing", 
    "Module-15-Performance-Profiling-and-Benchmarking/Lesson-15-1-Benchmarking-with-Criterion-rs", 
    "Module-15-Performance-Profiling-and-Benchmarking/Lesson-15-2-flamegraph-perf-Tools", 
    "Module-15-Performance-Profiling-and-Benchmarking/Lesson-15-3-Lock-Contention-Async-Stalls", 
    "Module-15-Performance-Profiling-and-Benchmarking/Lesson-15-4-Unsafe-Zones-and-Codegen-Intuition", 
    "Module-16-Packaging-CI-CD-and-Deployment/Lesson-16-1-Building-Static-Binaries", 
    "Module-16-Packaging-CI-CD-and-Deployment/Lesson-16-2-Dockerizing-Rust-Services", 
    "Module-16-Packaging-CI-CD-and-Deployment/Lesson-16-3-GitHub-Actions-CI-CD-Pipeline", 
    "Module-16-Packaging-CI-CD-and-Deployment/Lesson-16-4-Versioning-with-cargo-release", 
    "Module-16-Packaging-CI-CD-and-Deployment/Lesson-16-5-Deploying-to-Cloud-Run-or-Fly-io", 
    "Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-1-Async-Agents-with-Traits-Tasks", 
    "Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-2-Heartbeat-Health-Ping-Services", 
    "Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-3-Self-recovering-Workers-Supervisor-Tree", 
    "Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-4-Message-Flow-with-Trait-based-Agents", 
    "Module-17-Agentic-Rust-Meta-Programming-and-Autonomy/Lesson-17-5-Embedding-AI-Inference-Pipelines", 
    "Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-1-Zero-Copy-Data-Processing-with-Slices", 
    "Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-2-Streaming-File-Processing-with-Async-Buffers", 
    "Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-3-Parallel-Tokenization-and-Chunking", 
    "Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-4-Integrating-Rust-into-Python-AI-Pipelines", 
    "Module-18-Bonus-Real-AI-Pipeline-Optimization/Lesson-18-5-Benchmark-Rust-vs-Python-Preprocessing"
] # This will be populated by the setup script
    
         # Common dependencies for all lessons
         [workspace.dependencies]
         anyhow = "1.0"
         async-trait = "0.1"
          tokio = { version = "1", features = ["full"] }
        tracing = "0.1"
        tracing-subscriber = { version = "0.3", features = ["env-filter"] }
        rand = "0.8"
        rayon = "1.5"
    
        # FFI dependencies
        pyo3 = { version = "0.19", features = ["extension-module"] }
        wasm-bindgen = "0.2"
        worker = "0.1" # For Cloudflare Workers
        lapin = { version = "0.3", default-features = false, features = ["tokio", "rustls"] }   
        async-nats = "0.29"
        sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
        thiserror = "1.0"
   
        # Dev dependencies (e.g., for benchmarking)
        criterion = { version = "0.4", features = ["html_reports"] }








