[package]
name = "lesson_05_3_thiserror_and_anyhow_crates"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_05_3_thiserror_and_anyhow_crates_benchmark"
harness = false
