[package]
name = "lesson_07_4_async_error_handling_and_cancellation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_07_4_async_error_handling_and_cancellation_benchmark"
harness = false
