[package]
name = "lesson_07_5_real_example_async_outbox_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_07_5_real_example_async_outbox_relay_benchmark"
harness = false
