[package]
name = "lesson_08_3_actor_model_and_message_passing_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_08_3_actor_model_and_message_passing_simulation_benchmark"
harness = false
