[package]
name = "lesson_09_4_real_world_modular_outbox_bridge_layout"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_09_4_real_world_modular_outbox_bridge_layout_benchmark"
harness = false
