[package]
name = "lesson_10_3_fan_out_pattern_using_broadcast_channels"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_10_3_fan_out_pattern_using_broadcast_channels_benchmark"
harness = false
