[package]
name = "lesson_11_4_practical_async_cache_or_pool_with_lifetimes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_11_4_practical_async_cache_or_pool_with_lifetimes_benchmark"
harness = false
