[package]
name = "lesson_12_5_deploying_to_cloudflare_workers"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
worker = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_12_5_deploying_to_cloudflare_workers_benchmark"
harness = false
