[package]
name = "lesson_13_6_gats_generic_associated_types_in_async_traits"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_13_6_gats_generic_associated_types_in_async_traits_benchmark"
harness = false
