[package]
name = "lesson_14_2_outbox_store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_14_2_outbox_store_benchmark"
harness = false
