[package]
name = "lesson_14_3_message_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
lapin = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_14_3_message_relay_benchmark"
harness = false
