[package]
name = "lesson_14_4_retry_logic_with_exponential_backoff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_14_4_retry_logic_with_exponential_backoff_benchmark"
harness = false
