[package]
name = "lesson_14_5_parallel_processing_with_join_rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_14_5_parallel_processing_with_join_rayon_benchmark"
harness = false
