[package]
name = "lesson_14_6_graceful_shutdown_cleanup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_14_6_graceful_shutdown_cleanup_benchmark"
harness = false
