[package]
name = "lesson_14_7_logging_observability_with_tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_14_7_logging_observability_with_tracing_benchmark"
harness = false
