[package]
name = "lesson_17_1_async_agents_with_traits_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_17_1_async_agents_with_traits_tasks_benchmark"
harness = false
