[package]
name = "lesson_17_2_heartbeat_health_ping_services"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_17_2_heartbeat_health_ping_services_benchmark"
harness = false
