[package]
name = "lesson_17_3_self_recovering_workers_supervisor_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_17_3_self_recovering_workers_supervisor_tree_benchmark"
harness = false
