[package]
name = "lesson_17_4_message_flow_with_trait_based_agents"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_17_4_message_flow_with_trait_based_agents_benchmark"
harness = false
