[package]
name = "lesson_17_5_embedding_ai_inference_pipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_17_5_embedding_ai_inference_pipelines_benchmark"
harness = false
