[package]
name = "lesson_18_2_streaming_file_processing_with_async_buffers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_18_2_streaming_file_processing_with_async_buffers_benchmark"
harness = false
