[package]
name = "lesson_18_4_integrating_rust_into_python_ai_pipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lesson_18_4_integrating_rust_into_python_ai_pipelines_benchmark"
harness = false
